# pagio

./: .coveragerc  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  tox.ini
docs/source/: conf.py  index.rst  installation.rst  stmt_caching.rst  timezone.rst
docs/source/_static/: custom.css
docs/source/reference/: connection.rst  index.rst
docs/source/usage/: bulk_copy.rst  connecting.rst  executing.rst  index.rst
pagio/: __init__.py  _pagio.pyi  array.py  async_connection.py  async_protocol.py  base_connection.py  base_protocol.py  common.py  const.py  dt.py  network.py  numeric.py  pgscramp.py  sync_connection.py  sync_protocol.py  text.py  zoneinfo.py
pagio/django/: base.py  compiler.py  creation.py  cursor.py  ext_types.py  features.py  operations.py  patch_django.py  schema.py
pagio/django/postgis/: adapter.py  base.py  compiler.py  features.py  operations.py  schema.py
pagio/django/tests_django/: models.py  run_tests.py  test_settings.py  tests.py
pagio/docs/: stmt_caching.rst  timezone.rst
pagio/extension/: array.c  array.h  complex.c  complex.h  datetime.c  datetime.h  field_info.c  field_info.h  json.c  json.h  network.c  network.h  numeric.c  numeric.h  pagio.h  protocol.c  protocol.h  stmt.c  stmt.h  text.c  text.h  utils.c  utils.h  uuid.c  uuid.h
pagio/types/: __init__.py  array.py  conv_utils.py  converters.py  dt.py  hstore.py  network.py  numeric.py  range.py  text.py
stubs/scramp/: __init__.pyi  core.pyi  utils.pyi
test/: test_async_conn.py  test_async_conn_type.py  test_async_res.py  test_conn.py  test_conn_type.py  test_copy.py  test_listen.py  test_ranges.py  test_sync_res.py
